[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Noor"
version = "0.1.0"
description = "A pandas DataFrame extension for technical analysis."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "nainajnahO", email = "d.ohanjanian@icloud.com" }
]
requires-python = ">=3.9"
dependencies = [
  "pandas>=1.0"
]

[project.urls]
Homepage = "https://github.com/yourname/noor"
Documentation = "https://yourdocs.example.com"